# AML-GreenVision

./: .gitignore  ASSIGNMENT.md  ASSIGNMENT_W10A1.md  ASSIGNMENT_W9A1.md  IMPLEMENTATION_GUIDE.md  README.md  adamw-vs-adam-demo.html  lesson.md  pyproject.toml  requirements.txt
.github/: agent.md  copilot-instructions.md
api/: __init__.py  inference.py  main.py  schemas.py  treatments.py
api/routes/: __init__.py  health.py  predict.py
artifacts/: per_class_report.txt
data/: treatments.json
docs/: AUDIENCE_NOTES.md  CLAUDE_PROMPTS.md  IMPLEMENTATION_PLAN.md  PRESENTATION_SCRIPT.md  RESEARCH_LOG.md  TRAINING_REPORT.md  W10_IMPLEMENTATION_PLAN.md
presentations/: w9d3-decisions.html
scripts/: _phase1_verify.py  _phase3_verify.py  _phase4_verify.py  _phase5_verify.py  _test_eval.py  copy_test_samples.py  demo.sh  demo_reset.sh  demo_static.sh  export_mlflow_for_dashboard.py  promote.py  setup-web.sh  train.py
src/greenvision/: __init__.py
src/greenvision/data/: class_names.py  datasets.py  splits.py  transforms.py
src/greenvision/models/: efficientnet_head.py
src/greenvision/training/: loop.py  mlflow_utils.py  optim.py  phases.py  registry.py  (+2 more)
web/: next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: ai-disclaimer.tsx  confidence-badge.tsx  prediction-result.tsx  severity-chip.tsx  site-nav.tsx  theme-toggle.tsx  top-k-alternatives.tsx  upload-card.tsx
web/lib/: api-client.ts  format-class-name.ts  types.ts  use-test-samples.ts  use-training-data.ts
web/public/: test-samples.json  training_data.json
(+11 files in other folders)
